--- a/app/src/main/res/layout/activity_call_detail_of_customer.xml
+++ b/app/src/main/res/layout/activity_call_detail_of_customer.xml
@@ -222,6 +222,18 @@
                             app:layout_constraintStart_toEndOf="@id/labelLocation"
                             app:layout_constraintTop_toTopOf="@id/labelMobileNumber" />
 
+                        <ImageView
+                            android:src="@drawable/wifi_call"
+                            app:layout_constraintTop_toTopOf="@id/txtMobileNumber"
+                            app:layout_constraintBottom_toBottomOf="@id/txtMobileNumber"
+                            app:layout_constraintStart_toEndOf="@id/txtMobileNumber"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:layout_width="@dimen/_20sdp"
+                            android:layout_height="@dimen/_20sdp"
+                            app:tint="@color/textBlue" />
+
+
+
                         <TextView
                             android:id="@+id/labelAadharNumber"
                             style="@style/common_text_style"
@@ -410,7 +422,7 @@
                             style="@style/common_text_style"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="  20/02/2023"
+                            android:text="  28/02/2023"
                             app:layout_constraintStart_toEndOf="@id/labelLocation"
                             app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                             app:layout_constraintTop_toBottomOf="@+id/labelAmountDueAsOn" />
@@ -451,6 +463,7 @@
                             android:textColor="@color/black"
                             android:textSize="@dimen/_12ssp"
                             android:textStyle="italic"
+                            android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="@id/labelBalanceInterest"
                             app:layout_constraintStart_toEndOf="@id/labelLocation"
                             app:layout_constraintTop_toTopOf="@id/labelBalanceInterest" />
@@ -491,7 +504,7 @@
                             style="@style/common_text_style"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="  21/03/2023"
+                            android:text="  30/03/2023"
                             app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                             app:layout_constraintTop_toBottomOf="@+id/labelTotalPayable" />
 
@@ -504,6 +517,7 @@
                             android:textColor="@color/black"
                             android:textSize="@dimen/_12ssp"
                             android:textStyle="italic"
+                            android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="@id/txtTotalPayableDate"
                             app:layout_constraintStart_toEndOf="@id/labelLocation"
                             app:layout_constraintTop_toTopOf="@id/labelTotalPayable" />
@@ -517,6 +531,7 @@
                             android:layout_marginTop="@dimen/_10sdp"
                             android:paddingStart="@dimen/_5sdp"
                             android:paddingEnd="0dp"
+                            android:visibility="invisible"
                             android:text="@string/total_amt_paid"
                             app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                             app:layout_constraintTop_toBottomOf="@id/txtTotalPayableDate" />
@@ -545,6 +560,7 @@
                             android:hint="@string/enter_amount"
                             android:inputType="number"
                             android:maxLength="8"
+                            android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="@id/labelTotalAmtPaid"
                             app:layout_constraintStart_toEndOf="@id/labelLocation"
                             app:layout_constraintTop_toTopOf="@id/labelTotalAmtPaid" />
@@ -555,6 +571,7 @@
                             android:layout_height="@dimen/_20sdp"
                             android:layout_marginEnd="@dimen/_10sdp"
                             android:src="@drawable/printer_icon"
+                            android:visibility="invisible"
                             app:layout_constraintBottom_toBottomOf="@+id/labelTotalAmtPaid"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/labelTotalAmtPaid"
@@ -608,6 +625,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/green"
                     android:text="@string/spoke_to_customer"
+                    android:textStyle="normal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/blankView" />
@@ -616,6 +634,7 @@
                 <Button
                     android:id="@+id/btnNotSpokeToCustomer"
                     style="@style/BigButtonStyle"
+                    android:textStyle="normal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
