--- a/app/src/main/res/layout/activity_near_by_customers.xml
+++ b/app/src/main/res/layout/activity_near_by_customers.xml
@@ -14,6 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
+        android:textStyle="normal"
         style="@style/BigButtonStyle"
         android:text="@string/view_nearby_customers"
         android:layout_width="wrap_content"
@@ -246,6 +247,7 @@
        app:layout_constraintTop_toBottomOf="@id/btnVisitNearbyCustomers"
         android:layout_marginTop="@dimen/_50sdp"
         style="@style/BigButtonStyle"
+        android:textStyle="normal"
         android:backgroundTint="@color/green"
         android:text="@string/goto_dashboard"
         android:layout_width="wrap_content"
