--- a/app/src/main/res/layout/activity_visit_completion_of_customer.xml
+++ b/app/src/main/res/layout/activity_visit_completion_of_customer.xml
@@ -221,6 +221,16 @@
                         app:layout_constraintStart_toEndOf="@id/labelLocation"
                         app:layout_constraintTop_toTopOf="@id/labelMobileNumber" />
 
+                    <ImageView
+                        android:src="@drawable/wifi_call"
+                        app:layout_constraintTop_toTopOf="@id/txtMobileNumber"
+                        app:layout_constraintBottom_toBottomOf="@id/txtMobileNumber"
+                        app:layout_constraintStart_toEndOf="@id/txtMobileNumber"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        app:tint="@color/textBlue" />
+
                     <TextView
                         android:id="@+id/labelAadharNumber"
                         style="@style/common_text_style"
@@ -409,7 +419,7 @@
                         style="@style/common_text_style"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="  20/02/2023"
+                        android:text="  28/02/2023"
                         app:layout_constraintStart_toEndOf="@id/labelLocation"
                         app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                         app:layout_constraintTop_toBottomOf="@+id/labelAmountDueAsOn" />
@@ -446,7 +456,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_75sdp"
-                        android:text=": Rs 10,00,000.00"
+                        android:text=": Rs 450.00"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12ssp"
                         android:textStyle="italic"
@@ -490,7 +500,7 @@
                         style="@style/common_text_style"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="  21/03/2023"
+                        android:text="  30/03/2023"
                         app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                         app:layout_constraintTop_toBottomOf="@+id/labelTotalPayable" />
 
@@ -499,7 +509,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_75sdp"
-                        android:text=": Rs 10,000.00"
+                        android:text=": Rs 10,450.00"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12ssp"
                         android:textStyle="italic"
@@ -517,6 +527,7 @@
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingEnd="0dp"
                         android:text="@string/total_amt_paid"
+                        android:visibility="invisible"
                         app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                         app:layout_constraintTop_toBottomOf="@id/txtTotalPayableDate" />
 
@@ -544,6 +555,7 @@
                         android:hint="@string/enter_amount"
                         android:inputType="number"
                         android:maxLength="8"
+                        android:visibility="invisible"
                         app:layout_constraintBottom_toBottomOf="@id/labelTotalAmtPaid"
                         app:layout_constraintStart_toEndOf="@id/labelLocation"
                         app:layout_constraintTop_toTopOf="@id/labelTotalAmtPaid" />
@@ -556,6 +568,7 @@
                         android:src="@drawable/printer_icon"
                         app:layout_constraintBottom_toBottomOf="@+id/labelTotalAmtPaid"
                         app:layout_constraintEnd_toEndOf="parent"
+                        android:visibility="invisible"
                         app:layout_constraintTop_toTopOf="@+id/labelTotalAmtPaid"
                         app:tint="@color/textBlue" />
 
@@ -603,6 +616,7 @@
             <Button
                 android:id="@+id/btnCompleteNoChange"
                 style="@style/BigButtonStyle"
+                android:textStyle="normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/barnRed"
@@ -615,6 +629,7 @@
             <Button
                 android:id="@+id/btnCompleteNeedToUpdateDetails"
                 style="@style/BigButtonStyle"
+                android:textStyle="normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
@@ -628,6 +643,7 @@
             <Button
                 android:id="@+id/btnCompleteEscalateToBM"
                 style="@style/BigButtonStyle"
+                android:textStyle="normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
