--- a/app/src/main/res/layout/custom_dialog_box.xml
+++ b/app/src/main/res/layout/custom_dialog_box.xml
@@ -31,17 +31,49 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="This is a Custom Dialog Box"/>
+
+        <EditText
+            android:id="@+id/edtCustomDialog"
+            app:layout_constraintTop_toBottomOf="@id/txtCustomDialog"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:hint="@string/enter_details_here"
+            android:paddingStart="@dimen/_3sdp"
+            android:inputType="textMultiLine"
+            android:visibility="invisible"
+            android:paddingEnd="@dimen/_3sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+
+        <TextView
+            android:id="@+id/txtCustom"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/txtCustomDialog"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:visibility="invisible"
+            android:text="Friday , 31/3/2023\nCustomer was busy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
         <Button
             android:id="@+id/btnCustomDialog"
             style="@style/ButtonStyle"
            android:layout_marginBottom="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtCustomDialog"
+            app:layout_constraintTop_toBottomOf="@id/edtCustomDialog"
             android:text="@string/ok" />
 
 
