Total Members = Completed Members + Pending Members value managed in Assigned section and item_dashboard3_api

--- a/app/src/main/res/layout/activity_main_activity3_api.xml
+++ b/app/src/main/res/layout/activity_main_activity3_api.xml
@@ -276,7 +276,7 @@
                             android:id="@+id/labelTotalAssignedValue"
                             style="@style/semi_mid_text_style"
                             android:layout_marginTop="@dimen/_10sdp"
-                            android:text="90"
+                            tools:text="90"
                             android:layout_marginEnd="@dimen/_55sdp"
                             android:textColor="@color/black"
                             android:textStyle="normal"
@@ -324,7 +324,7 @@
                             android:layout_marginStart="@dimen/_30sdp"
                             android:layout_marginTop="@dimen/_10sdp"
                             android:layout_marginEnd="@dimen/_20sdp"
-                            android:text="90"
+                            tools:text="90"
                             android:textColor="@color/black"
                             android:textStyle="normal"
                             app:layout_constraintEnd_toEndOf="@+id/labelPendingMembersAssigned"
