Custom dialog timepicker added in all these activities for editing  time

--- a/app/src/main/res/layout/activity_details_of_customer.xml
+++ b/app/src/main/res/layout/activity_details_of_customer.xml
@@ -182,6 +182,7 @@
 
 
                          <ImageView
+                             android:id="@+id/ivEditTime"
                              android:layout_width="@dimen/_22sdp"
                              android:layout_height="@dimen/_15sdp"
                              android:layout_marginStart="@dimen/_10sdp"
